# C-Projects

C++ Projects/PhD prototype implementation/src/: main.cpp
C++ Projects/PhD prototype implementation/src/Algorithm/: CenterMapping.cpp  CenterMapping.h  FaceDetection.cpp  FaceDetection.h  FaceMapping.cpp  FaceMapping.h  FocusMapping.cpp  FocusMapping.h  Process.cpp  Process.h
C++ Projects/PhD prototype implementation/src/Input/: Camera.cpp  Camera.h  CompressedVideo.cpp  CompressedVideo.h  Picture.cpp  Picture.h  Video.cpp  Video.h
C++ Projects/PhD prototype implementation/src/Interface/: Image.cpp  Image.h  Interface.cpp  Interface.h  QOpenCV2Widget.cpp  QOpenCV2Widget.h
C++ Projects/PhD prototype implementation/src/Tool/: Gaussian.cpp  Gaussian.h  Test.cpp  Test.h
C++ Projects/camera-focus/: CMakeLists.txt
C++ Projects/camera-focus/src/: Focus_Measurement.cpp  Focus_Measurement_Functions.cpp  GraphUtils.cpp  GraphUtils.h
C++ Projects/laneDetection_vehicleDetection/: CMakeLists.txt  Readme.md
C++ Projects/laneDetection_vehicleDetection/res/: cars_Yan.xml  cars_Yan_slow.xml
C++ Projects/laneDetection_vehicleDetection/src/: CMakeLists.txt  laneDetection_vehicleDetection.cpp
